image alignmenty + another html fix

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-color: gold;
     border: black solid 4px;
     margin: 8px 8px ;
-    box-shadow: 8px 8px gray;
+    box-shadow: 8px 8px black;
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -16,7 +16,7 @@ body {
     background-color: blue;
     border: black solid 4px;
     margin: 8px 8px;
-    box-shadow: 8px 8px gray;
+    box-shadow: 8px 8px black;
     text-align: left;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
@@ -33,4 +33,8 @@ table {
     border-collapse: collapse;
     text-align: left;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.openingimage {
+    text-align: center;
 }
